--- a/pagerrr.css
+++ b/pagerrr.css
@@ -57,8 +57,9 @@ nav ul li a {
 img {
     border-radius: 50%;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-    width: 500px;
-    height: 500px;
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
 }
 
 /* Project Cards */
